CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
# Avoid warnings in higher versions
IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.6)
 CMAKE_POLICY(VERSION 2.8)
ENDIF()

# If choose to build documentation, then search for Doxygen executables.
INCLUDE (${CMAKE_ROOT}/Modules/CMakeDependentOption.cmake)
CMAKE_DEPENDENT_OPTION(BUILD_DOCUMENTATION_API 
                      "Build API Documentation with Doxygen" ON
                       BUILD_DOCUMENTATION OFF)

# If choose to build documentation, then search for Doxygen executables.
IF(BUILD_DOCUMENTATION_API)
  FIND_PACKAGE(Doxygen REQUIRED)

  OPTION(DOXYGEN_SHORT_NAMES "Build Standard Layer documentations with short files name" OFF)
  MARK_AS_ADVANCED(DOXYGEN_SHORT_NAMES)
  IF(DOXYGEN_SHORT_NAMES)
    SET(DOXYGEN_SHORT_NAMES YES)
  ELSE(DOXYGEN_SHORT_NAMES)
    SET(DOXYGEN_SHORT_NAMES NO)
  ENDIF(DOXYGEN_SHORT_NAMES)

  #
  # Configure the script and the doxyfile, then add target
  #
  SET(HAVE_DOT_YESNO NO)
  IF(DOT)
    SET(HAVE_DOT_YESNO YES)
    IF(NOT DOT_PATH)
      GET_FILENAME_COMPONENT(DOT_PATH ${DOT} PATH)
    ENDIF(NOT DOT_PATH)
  ENDIF(DOT)

  # API target
  CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_SM_API.in
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_SM_API)

  ADD_CUSTOM_TARGET(Doxygen_SM_API ALL
    COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_SM_API
    MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_SM_API
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF(BUILD_DOCUMENTATION_API)

SET( SML_MARSHALL_SMALL_PREFIX "smr" )
SET( SML_MARSHALL_LARGE_PREFIX "SMR" )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlLogDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/include/${SML_MARSHALL_SMALL_PREFIX}LogDef.h)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlLogMirrorDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/include/${SML_MARSHALL_SMALL_PREFIX}LogMirrorDef.h)
               
SET( SML_MARSHALL_SMALL_PREFIX "sml" )
SET( SML_MARSHALL_LARGE_PREFIX "SML" )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlSuppLogDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/include/${SML_MARSHALL_SMALL_PREFIX}SuppLogDef.h)

SET( SML_MARSHALL_SMALL_PREFIX "smdmph" )
SET( SML_MARSHALL_LARGE_PREFIX "SMDMPH" )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlRowDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/include/${SML_MARSHALL_SMALL_PREFIX}RowDef.h)

SET( SML_MARSHALL_SMALL_PREFIX "smdmpf" )
SET( SML_MARSHALL_LARGE_PREFIX "SMDMPF" )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlRowDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/include/${SML_MARSHALL_SMALL_PREFIX}RowDef.h)

SET( SML_MARSHALL_SMALL_PREFIX "smp" )
SET( SML_MARSHALL_LARGE_PREFIX "SMP" )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlColumnDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/include/${SML_MARSHALL_SMALL_PREFIX}ColumnDef.h)

SET( SML_MARSHALL_SMALL_PREFIX "smg" )
SET( SML_MARSHALL_LARGE_PREFIX "SMG" )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/include/smlClassDef.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/include/${SML_MARSHALL_SMALL_PREFIX}ClassDef.h)

INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STANDARD_DIR}/dev/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_DATATYPE_DIR}/dev/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_COMMUNICATION_DIR}/dev/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_KERNEL_DIR}/dev/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_SERVERCOMMUNICATION_DIR}/dev/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smf/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smp/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smt/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smg/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smr/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smx/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/sms/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/sma/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smd/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smn/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smk/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/sme/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smq/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smb/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smf/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/src/smo/include )
INCLUDE_DIRECTORIES( ${PRODUCT_LAYER_STORAGEMANAGER_DIR}/dev/include )

# common source files
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sml        SM_LIBRARY_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smb        SM_DATABASE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smp        SM_PAGE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smp/smpm   SM_PAGE_MEMORY_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smp/smpd   SM_PAGE_DISK_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smt        SM_TABLESPACE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smt/smtmb  SM_TABLESPACE_MEMORY_BITMAP_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smt/smtdb  SM_TABLESPACE_DISK_BITMAP_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms        SM_SEGMENT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms/smsmb  SM_SEGMENT_MEMORY_BITMAP_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms/smsmc  SM_SEGMENT_MEMORY_CIRCULAR_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms/smsmf  SM_SEGMENT_MEMORY_FLAT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms/smsmp  SM_SEGMENT_MEMORY_PENDING_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms/smsdb  SM_SEGMENT_DISK_BITMAP_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sms/smsdc  SM_SEGMENT_DISK_CIRCULAR_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sma        SM_STATEMENT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smx        SM_TRANSACTION_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smx/smxg   SM_TRANSACTION_GLOBAL_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smx/smxl   SM_TRANSACTION_LOCAL_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smx/smxm   SM_MINITRANSACTION_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smk        SM_LOCK_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smk/smkg   SM_LOCK_GLOBAL_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smk/smkl   SM_LOCK_LOCAL_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smr        SM_RECOVERY_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smh        SM_HA_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smh/smhc   SM_HA_RAC_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd        SM_TABLEDATA_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdpfh SM_TABLEDATA_PROCESS_FIXED_TABLE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdpdh SM_TABLEDATA_PROCESS_DUMP_TABLE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmpc SM_TABLEDATA_MEMORY_PERSISTENT_CLUSTERD_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmph SM_TABLEDATA_MEMORY_PERSISTENT_HEAP_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmpf SM_TABLEDATA_MEMORY_PERSISTENT_HEAP_COLUMNAR_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmpp SM_TABLEDATA_MEMORY_PERSISTENT_PENDING_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmif SM_TABLEDATA_MEMORY_INSTANT_FLAT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmis SM_TABLEDATA_MEMORY_INSTANT_SORT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smdmih SM_TABLEDATA_MEMORY_INSTANT_HASH_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smddpc SM_TABLEDATA_DISK_PERSISTENT_CLUSTERD_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smddph SM_TABLEDATA_DISK_PERSISTENT_HEAP_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smddif SM_TABLEDATA_DISK_INSTANT_FLAT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smddis SM_TABLEDATA_DISK_INSTANT_SORT_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smd/smddih SM_TABLEDATA_DISK_INSTANT_HASH_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn        SM_INDEX_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smnmpb SM_INDEX_MEMORY_PERSISTENT_BTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smnmpr SM_INDEX_MEMORY_PERSISTENT_RTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smnmib SM_INDEX_MEMORY_INSTANT_BTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smnmih SM_INDEX_MEMORY_INSTANT_HASH_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smnmir SM_INDEX_MEMORY_INSTANT_RTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smndpb SM_INDEX_DISK_PERSISTENT_BTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smndpr SM_INDEX_DISK_PERSISTENT_RTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smndib SM_INDEX_DISK_INSTANT_BTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smn/smndir SM_INDEX_DISK_INSTANT_RTREE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smi        SM_ITERATOR_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smf        SM_DATAFILE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smf/smfm   SM_DATAFILE_MEMORY_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smf/smfd   SM_DATAFILE_DISK_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smm        SM_MISC_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smg        SM_GENERAL_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/sme        SM_RELATION_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smq        SM_SEQUENCE_SOURCE_FILES )
AUX_SOURCE_DIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/dev/src/smo        SM_OPERATOR_SOURCE_FILES )

SET( LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/dev/lib )

# LIBRARY
SET(SM_SOURCES_FILES ${SM_LIBRARY_SOURCE_FILES}
                     ${SM_PAGE_SOURCE_FILES}
                     ${SM_DATABASE_SOURCE_FILES}
                     ${SM_PAGE_MEMORY_SOURCE_FILES}
                     ${SM_PAGE_DISK_SOURCE_FILES}
                     ${SM_TABLESPACE_SOURCE_FILES}
                     ${SM_TABLESPACE_MEMORY_BITMAP_SOURCE_FILES}
                     ${SM_TABLESPACE_DISK_BITMAP_SOURCE_FILES}
                     ${SM_SEGMENT_SOURCE_FILES}
                     ${SM_SEGMENT_MEMORY_BITMAP_SOURCE_FILES}
                     ${SM_SEGMENT_MEMORY_CIRCULAR_SOURCE_FILES}
                     ${SM_SEGMENT_MEMORY_FLAT_SOURCE_FILES}
                     ${SM_SEGMENT_MEMORY_PENDING_SOURCE_FILES}
                     ${SM_SEGMENT_DISK_BITMAP_SOURCE_FILES}
                     ${SM_SEGMENT_DISK_CIRCULAR_SOURCE_FILES}
                     ${SM_STATEMENT_SOURCE_FILES}
                     ${SM_TRANSACTION_SOURCE_FILES}
                     ${SM_TRANSACTION_GLOBAL_SOURCE_FILES}
                     ${SM_TRANSACTION_LOCAL_SOURCE_FILES}
                     ${SM_MINITRANSACTION_SOURCE_FILES}
                     ${SM_LOCK_SOURCE_FILES}
                     ${SM_LOCK_GLOBAL_SOURCE_FILES}
                     ${SM_LOCK_LOCAL_SOURCE_FILES}
                     ${SM_RECOVERY_SOURCE_FILES}
                     ${SM_HA_SOURCE_FILES}
                     ${SM_HA_RAC_SOURCE_FILES}
                     ${SM_TABLEDATA_SOURCE_FILES}
                     ${SM_TABLEDATA_PROCESS_FIXED_TABLE_SOURCE_FILES}
                     ${SM_TABLEDATA_PROCESS_DUMP_TABLE_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_PERSISTENT_CLUSTERD_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_PERSISTENT_HEAP_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_PERSISTENT_HEAP_COLUMNAR_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_PERSISTENT_PENDING_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_INSTANT_FLAT_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_INSTANT_SORT_SOURCE_FILES}
                     ${SM_TABLEDATA_MEMORY_INSTANT_HASH_SOURCE_FILES}
                     ${SM_TABLEDATA_DISK_PERSISTENT_CLUSTERD_SOURCE_FILES}
                     ${SM_TABLEDATA_DISK_PERSISTENT_HEAP_SOURCE_FILES}
                     ${SM_TABLEDATA_DISK_INSTANT_FLAT_SOURCE_FILES}
                     ${SM_TABLEDATA_DISK_INSTANT_SORT_SOURCE_FILES}
                     ${SM_TABLEDATA_DISK_INSTANT_HASH_SOURCE_FILES}
                     ${SM_INDEX_SOURCE_FILES}
                     ${SM_INDEX_MEMORY_PERSISTENT_BTREE_SOURCE_FILES}
                     ${SM_INDEX_MEMORY_PERSISTENT_RTREE_SOURCE_FILES}
                     ${SM_INDEX_MEMORY_INSTANT_BTREE_SOURCE_FILES}
                     ${SM_INDEX_MEMORY_INSTANT_HASH_SOURCE_FILES}
                     ${SM_INDEX_MEMORY_INSTANT_RTREE_SOURCE_FILES}
                     ${SM_INDEX_DISK_PERSISTENT_BTREE_SOURCE_FILES}
                     ${SM_INDEX_DISK_PERSISTENT_RTREE_SOURCE_FILES}
                     ${SM_INDEX_DISK_INSTANT_BTREE_SOURCE_FILES}
                     ${SM_INDEX_DISK_INSTANT_RTREE_SOURCE_FILES}
                     ${SM_ITERATOR_SOURCE_FILES}
                     ${SM_MISC_SOURCE_FILES}
                     ${SM_GENERAL_SOURCE_FILES}
                     ${SM_DATAFILE_SOURCE_FILES}
                     ${SM_DATAFILE_MEMORY_SOURCE_FILES}
                     ${SM_DATAFILE_DISK_SOURCE_FILES}
                     ${SM_SEQUENCE_SOURCE_FILES}
                     ${SM_OPERATOR_SOURCE_FILES}
                     ${SM_RELATION_SOURCE_FILES} )

IF( ${CMAKE_CPP_COMPILER} )
    SET_SOURCE_FILES_PROPERTIES( ${SM_SOURCES_FILES} PROPERTIES LANGUAGE CXX )
ENDIF()

LIST(REMOVE_DUPLICATES SM_SOURCES_FILES)

IF(${CMAKE_TARGET_HOST_TYPE} MATCHES "server")
ADD_LIBRARY(sm ${SM_SOURCES_FILES})
ENDIF()

SET(PRODUCT_LAYER_GLIESEA_SHARED_SOURCES ${PRODUCT_LAYER_GLIESEA_SHARED_SOURCES}
                                         ${SM_SOURCES_FILES}
    PARENT_SCOPE)

